small changes to the site activity indicator -- so that it is not visible in the header, but just the footer, and so that we can get an explanation of the numbers on roll-over... which... doesn't solve the issue on mobile, but is the beginning of a solution.

--- a/assets/css/elements/activity-indicator.css
+++ b/assets/css/elements/activity-indicator.css
@@ -125,7 +125,7 @@
 
 @media (max-width: 480px) {
     .activity-indicator {
-        padding: 0.25rem;
+        padding: 0;
     }
     
     .activity-icon {
